--- a/client/src/pages/platforms/cashier/pos/style.css
+++ b/client/src/pages/platforms/cashier/pos/style.css
@@ -3,7 +3,7 @@
   width: 100%;
 }
 
-.form-control {
+.form-controls {
   width: 100%;
   padding-right: 80px; /* Adjust based on the width of the select */
 }
