--- a/client/src/pages/platforms/cashier/pos/orders/order.css
+++ b/client/src/pages/platforms/cashier/pos/orders/order.css
@@ -1,6 +1,6 @@
 .popover-body-order {
   height: auto;
-  width: 550px !important;
+  width: 540px !important;
   border: 2px solid rgb(186, 173, 173);
   max-width: none;
   background-color: white;
@@ -20,8 +20,12 @@
   position: fixed;
   bottom: 0;
   z-index: 999;
-  width: 38%;
+  width: 46.5%;
   padding: 10px; /* Example: Adjust padding as needed */
+}
+
+th {
+  line-height: 0px;
 }
 
 /* big for laptop monitor */
