--- a/client/src/pages/platforms/cashier/pos/transactions/receipt/receipt.css
+++ b/client/src/pages/platforms/cashier/pos/transactions/receipt/receipt.css
@@ -7,10 +7,10 @@
   overflow: hidden;
 }
 
-.invoice-header {
+.invoice-view-header {
   position: relative;
   width: 85%;
-  height: 90%;
+  height: 92%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,13 +22,13 @@
   z-index: 1;
 }
 
-.invoice-header::before {
+.invoice-view-header::before {
   content: "";
   position: absolute;
-  top: -30%;
-  left: 6%;
-  width: 20px;
-  height: 132px;
+  top: -35%;
+  left: 8%;
+  width: 23px;
+  height: 140px;
   border-radius: 5px;
   background: linear-gradient(
     45deg,
@@ -39,12 +39,12 @@
   z-index: -1;
 }
 
-.invoice-header::after {
+.invoice-view-header::after {
   content: "";
   position: absolute;
   top: -35%;
-  left: -3%;
-  width: 17px;
+  left: 0.2%;
+  width: 23px;
   height: 130px;
   border-radius: 5px;
   background-color: violet;
@@ -95,53 +95,4 @@
   padding: 0.4rem;
   font-size: 0.9rem;
   font-weight: 450;
-}
-
-.invoice-signature {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  margin-top: 3em;
-  /* margin-left: 90px; */
-}
-
-.invoice-signature::before {
-  content: "";
-  position: absolute;
-  width: 300px;
-  height: 2px;
-  background-color: black;
-}
-
-.invoice-footer-container {
-  height: auto;
-}
-
-.invoice-footer-top {
-  text-align: end;
-  font-size: 1rem;
-  font-weight: 450;
-}
-
-.invoice-footer-top span:nth-child(1) {
-  border-right: 1px solid black;
-  margin-right: 0.5em;
-  padding-right: 0.3em;
-}
-
-.invoice-footer-top span:nth-child(2) {
-  border-right: 1px solid black;
-  margin-right: 0.5em;
-  padding-right: 0.3em;
-}
-
-.invoice-footer-bottom {
-  font-size: 1rem;
-  text-align: center;
-  background-color: rgba(24, 25, 26, 0.5);
-  color: white;
-  font-weight: 450;
-  text-transform: uppercase;
 }
