--- a/client/src/pages/platforms/cashier/pos/pos.css
+++ b/client/src/pages/platforms/cashier/pos/pos.css
@@ -51,3 +51,25 @@
   margin: 0 5px;
   transition: background-color 0.3s;
 }
+
+.dots-container {
+  position: absolute;
+  top: 73px;
+  right: -40px;
+  transform: translate(-30%, 30%);
+}
+
+.dot {
+  width: 25px;
+  height: 5px;
+  background-color: #ccc;
+  border-radius: 10px;
+  display: inline-block;
+  margin: 0 2px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.dot.active {
+  background-color: #007bff; /* Change this to your desired active color */
+  box-shadow: 0 0 2px 0 #007bff;
+}
