--- a/client/src/pages/platforms/administrator/report/transactions/style.css
+++ b/client/src/pages/platforms/administrator/report/transactions/style.css
@@ -7,3 +7,7 @@
   border-radius: 50%;
   transition: background-color 0.5s ease-out;
 }
+
+.total-amount {
+  background-color: red I !important;
+}
