--- a/client/src/components/printOut/print.css
+++ b/client/src/components/printOut/print.css
@@ -1,4 +1,3 @@
-/* Regular styles for screen */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -93,7 +92,6 @@ body {
   letter-spacing: -1px;
 }
 
-/* Print styles */
 @media print {
   body {
     font-family: Arial, sans-serif;
@@ -146,10 +144,12 @@ body {
   .cash {
     margin-right: 30px !important;
   }
+  .cash-value {
+    margin-right: 35px !important;
+  }
 
-  .change {
-    margin-right: 60px !important;
-    margin-left: 42px;
+  .cash-label {
+    width: 150px;
   }
 
   .header h6 {
