--- a/client/src/pages/platforms/customer/pos/pos.css
+++ b/client/src/pages/platforms/customer/pos/pos.css
@@ -104,3 +104,14 @@
   align-items: center;
   height: 50px;
 }
+
+.btn-link-style {
+  background-color: transparent !important;
+  box-shadow: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #007bff; /* Blue color */
+  font-size: inherit;
+  text-decoration: none; /* Ensure no underline */
+}
