--- a/client/src/pages/platforms/stockman/store/product.css
+++ b/client/src/pages/platforms/stockman/store/product.css
@@ -128,10 +128,11 @@
 }
 
 .main-image img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
+  width: auto; /* Maintain aspect ratio */
+  height: 300px; /* Fixed height */
+  object-fit: contain; /* Ensure the image covers the container */
   margin-bottom: 20px;
+  max-width: 390px; /* Optional: set a max-width to limit the size */
 }
 
 .gallery-container {
@@ -179,6 +180,7 @@
   top: 50%;
   transform: translateY(-50%);
   transition: background-color 0.3s;
+  z-index: 9;
 }
 
 .arrow-button.left {
