--- a/client/src/pages/platforms/customer/pos/card/style.css
+++ b/client/src/pages/platforms/customer/pos/card/style.css
@@ -5,7 +5,18 @@
 
 .sidebar-title {
   font-weight: 550;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.sidebar-title-borderNone {
+  border-bottom: none !important;
+}
+
+.sidebar-category-title {
+  font-weight: 550;
   border-bottom: 1px solid #ddd;
   margin-bottom: 10px;
   padding: 10px;
@@ -51,14 +62,16 @@
 .price-range-inputs {
   display: flex;
   align-items: center;
+  position: relative; /* Make sure it's positioned correctly */
 }
 
 .price-range-separator {
-  margin: 0 30px;
+  margin: 0 19px;
 }
 
 .mdb-input {
   flex: 1;
+  z-index: 1;
 }
 .warning-message-price-range {
   color: red;
