--- a/client/src/pages/platforms/customer/pos/profile/profile.css
+++ b/client/src/pages/platforms/customer/pos/profile/profile.css
@@ -4,7 +4,7 @@
 }
 
 .profile-pop-over-btn {
-  background: linear-gradient(to bottom, #ff3547, #ff3547);
+  background: linear-gradient(to bottom, #f6412d, #f6412d);
   border: none;
   box-shadow: 0px 0px 0px 0px !important;
   color: black !important;
