--- a/client/src/components/sidebar/style.css
+++ b/client/src/components/sidebar/style.css
@@ -2,6 +2,7 @@
   height: 100px !important;
   width: 100% !important;
   display: flex;
+  margin-top: 10px;
   align-items: center;
   justify-content: center;
   align-content: center;
